--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -135,7 +135,7 @@ section.shop {
     }
   }
   #carousel-home {
-    z-index: 1000;
+    z-index: 1;
     margin-left: 7%;
     margin-right: 7%;
     .slider {
