--- a/scss/_shop.scss
+++ b/scss/_shop.scss
@@ -88,6 +88,7 @@ section.shop {
       }
       .col-md-9 {
           ul {
+            z-index: 1;
             white-space: nowrap;
             overflow-x: auto;
             font-weight: bold;
@@ -152,7 +153,7 @@ section.shop {
   height: 350px;
   border-radius: unset;
   border: none;
-  z-index: 100;
+  // z-index: 100;
   &:hover {
     box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.5);
   }
