--- a/scss/_tours.scss
+++ b/scss/_tours.scss
@@ -109,7 +109,7 @@
         }
         transition: 0.5s;
         .card-img-top {
-          z-index: 100;
+          z-index: 1;
         }
         .card-title {
           font-weight: bold;
@@ -117,7 +117,7 @@
         a.btn {
           font-weight: bold;
           width: 100%;
-          z-index: 100;
+          z-index: 1;
           border: none;
         }
         a.btn-danger {
